@@ -7,7 +7,7 @@
 
 <body>
 <h1>PRADO Framework for PHP 5 </h1>
-<p>Version 3.0.5, October 23, 2006<br>
+<p>Version 3.0.6, December 4, 2006<br>
 Copyright&copy; 2004-2006 by <a href="http://www.pradosoft.com/">PradoSoft</a><br>
 All Rights Reserved.
 </p>
